--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
         const socket = io('http://localhost:3000');
+        socket.emit('path', {
+            path: window.location.pathname
+        })
     </script>
 </body>
 
