--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 
 <body>
-    hello word
+    <div class="main"></div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
         const socket = io('http://localhost:3000');
         socket.emit('location', {
             full: window.location
+        })
+        socket.on('html', element => {
+            $('#main').append(element);
         })
     </script>
 </body>
