--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
         const socket = io('http://localhost:3000');
-        socket.emit('location', {
-            full: window.location
+        socket.on('connect', () => {
+            socket.emit('path', window.location.hash)
         })
         socket.on('html', element => {
-            console.log(element)
             $('#main').append(element);
         })
     </script>
