--- a/index.html
+++ b/index.html
@@ -61,6 +61,32 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-functions.js"></script>
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyDDbJBz5RY5so4UoYNBIqr2nQob1ROnrKs",
+            authDomain: "firmwares-github.firebaseapp.com",
+            databaseURL: "https://firmwares-github.firebaseio.com",
+            projectId: "firmwares-github",
+            storageBucket: "firmwares-github.appspot.com",
+            messagingSenderId: "753178353480",
+            appId: "1:753178353480:web:f3e862d355bd6e38"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+        var functions = firebase.functions();
+        var addMessage = firebase.functions().httpsCallable('app');
+        app('test').then(function (result) {
+            console.log(result)
+        }).catch(function (error) {
+            // Getting the Error details.
+            var code = error.code;
+            var message = error.message;
+            var details = error.details;
+            // ...
+        });
+    </script>
 </body>
 
 </html>
