--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
             apiKey: "AIzaSyDDbJBz5RY5so4UoYNBIqr2nQob1ROnrKs",
             authDomain: "firmwares-github.firebaseapp.com",
             databaseURL: "https://firmwares-github.firebaseio.com",
-            projectId: "firmwares-github",
-            storageBucket: "firmwares-github.appspot.com",
-            messagingSenderId: "753178353480",
-            appId: "1:753178353480:web:f3e862d355bd6e38"
+            projectId: "firmwares-github"
         };
         firebase.initializeApp(firebaseConfig);
 
