--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             apiKey: "AIzaSyDDbJBz5RY5so4UoYNBIqr2nQob1ROnrKs",
             authDomain: "firmwares-github.firebaseapp.com",
             databaseURL: "https://firmwares-github.firebaseio.com",
-            projectId: "firmwares-github"
+            projectId: "firmwares-github",
         };
         firebase.initializeApp(firebaseConfig);
 
         var functions = firebase.functions();
-        var app = firebase.functions().httpsCallable('app');
+        var app = functions.httpsCallable('app');
         app('test').then(function (result) {
             console.log(result)
         }).catch(function (error) {
