--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         };
         firebase.initializeApp(firebaseConfig);
 
-        var app = functions.functions().httpsCallable('app');
+        var app = firebase.functions().httpsCallable('app');
         app('test').then(function (result) {
             console.log(result)
         }).catch(function (error) {
