--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
     <!-- Add additional services that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-functions.js"></script>
+
     <script src="/render.js"></script>
 </body>
 
